@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+1/25/24: Relaxed defocus criteria for acceptable CTF fit in coma-free
+alignment and add suggestion to try lower beam til temporarily (In 4.1).
+
 1/25/24: Adjusted default readout interval for Falcon 4i to give correct
 number of frames for 6-sec exposures (In 4.1).
 
